[package]
name = "text-tokenizer"
version = "0.5.0"
authors = ["merl <merl.001.mia@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Custom text tokenizer"

repository = "https://github.com/merl-twin/text-tokenizer"
homepage = "https://github.com/merl-twin/text-tokenizer"

include = [
    "**/*.rs",
    "Cargo.toml",
]


[features]
default = ["strings"]

strings = []

[dependencies]
text-parsing = "0.4"
unicode-segmentation = "1.2"
unicode-properties = "0.1"
lazy_static = "1.5"

